#13 - chatgpt api 연동
aiservice에서 chatgpt와 연동하기 위한 코드 작성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,3 +26,10 @@ spring:
       hibernate.format_sql: true
       hibernate.default_batch_fetch_size: 100
   sql.init.mode: always
+
+openai:
+  api:
+    url: https://api.openai.com/v1/chat/completions
+    key: ${api_key}
+  model:
+    name: gpt-4o
